--- a/README
+++ b/README
@@ -24,14 +24,20 @@ Wintermute may be already bundled up for your operating system distribution.
 Please visit <http://www.thesii.org/wiki/Wintermute#Download> to see if your
 system is currently supported.
 
-4. Documentation
+4. Plug-ins and Language Bindings
+
+We've currently added the ability to integrate and build plug-ins into
+Wintermute's core libraries. We're working on adding support for other language
+support to amplify the capabilities of Wintermute and its range of developers.
+
+5. Documentation
 
 Practically all of the documentation that's done for Wintermute is stored
 online at http://www.thesii.org/wiki. Feel free to not only search that site,
 but also enter our IRC channel (##sii-general or ##sii-dev) to ask
 questions about Wintermute and how you can assist.
 
-5. Reporting and Contributing to the Cause
+6. Reporting and Contributing to the Cause
 
 We here at the Synthetic Intellect Institute, the makers and maintainers
 of Wintermute, welcome all. If you want to chat with the guys responsible
