--- a/README
+++ b/README
@@ -37,8 +37,9 @@ support to amplify the capabilities of Wintermute and its range of developers.
 
 Practically all of the documentation that's done for Wintermute is stored
   on-line at <http://www.thesii.org/wiki>. Feel free to not only search that
-site, but also enter our IRC channel (##sii-general or ##sii-dev, both on
-FreeNode) to ask questions about Wintermute and how you can assist.
+site, but also enter our IRC channel (#sii or #sii-dev, both on
+FreeNode) to ask questions about Wintermute and how you can assist. Check out
+<http://www.thesii.org/wiki/Wintermute:Techbase:GettingStarted>.
 
 6. Reporting and Contributing to the Cause
 
