--- a/TODO
+++ b/TODO
@@ -1,1 +1,2 @@
-* Doxygen configuration to be polished + add automatic GraphViz checking
+* Doxygen configuration to be polished + add automatic GraphViz checking.
+* Correct headers installation - plugin-related stuff under plugins/ directory.
