--- a/README
+++ b/README
@@ -2,4 +2,9 @@
 
 Wintermute is an extensible application that aims to become the foundation of 
 an **artificial intelligence framework**. The application is written in C++ at 
-its core.
+its core. More information about the project can be found on [its Wiki 
+page](http://thesii.org/wiki/index.php/Wintermute)
+
+## Support
+
+Curren
