--- a/README
+++ b/README
@@ -5,6 +5,10 @@ an **artificial intelligence framework**. The application is written in C++ at
 its core. More information about the project can be found on [its Wiki 
 page](http://thesii.org/wiki/index.php/Wintermute)
 
+## Installing
+
+## Contributing
+
 ## Support
 
-Curren
+## Licensing
