--- a/README
+++ b/README
@@ -7,18 +7,23 @@ page](http://thesii.org/wiki/index.php/Wintermute).
 
 ## Installing
 
-Wintermute requires **[Qt](http://qt-project.org)** in order to be built.
-It also requires the use of **[qcommandline, with patches](https://github.com/jalcine/qcommandline)**
-and **[CMake](http://cmake.org)** for building.
+### Requirements
+Wintermute requires a few dependencies at this version. Right now, the only targeted platform is `Linux` due to its heavy dependency on D-Bus but work provided by contributors of other platforms.
 
-Once you've satisified those dependencies, building is a breeze. Seriously.
+  * CMake 2.8
+  * Qt 4.7 or greater - http://qt-project
+  * QCommandLine - https://github.com/jalcine/qcommandline
+  * QLogger - https://gitorious.org/log4qt/log4qt
+
+Once you've satisfied those dependencies, building is a breeze. Seriously.
 
 ```bash
 $ git clone git://github.com/jalcine/wintermute wintermute
 $ cd wintermute; mkdir build; cd build
 $ cmake .. -DCMAKE_INSTALL_PREFIX=~/.local -DCMAKE_BUILD_TYPE=Debug
 $ make
-$ make unittest test Experimental
+$ make unittest
+$ make test Experimental
 $ make install
 ```
 
