--- a/README
+++ b/README
@@ -10,12 +10,18 @@ page](http://thesii.org/wiki/index.php/Wintermute).
 Installing? Easy. We use [CMake](http://cmake.org); we gotcha.
 
 ### Requirements
-Wintermute requires a few dependencies at this version. Right now, the only targeted platform is `Linux` due to its heavy dependency on D-Bus but work provided by contributors of other platforms.
+Wintermute requires a few dependencies at this version. Right now, the only
+targeted platform is `Linux` due to its heavy dependency on D-Bus but work 
+provided by contributors of other platforms.
+
+> Work is being done to refactor out the logic originally used for D-Bus and
+> to use [ZeroMQ](http://zeromq.org) instead for cross-platform support.
 
   * CMake 2.8
   * Qt 4.7 or greater - http://qt-project.org
   * QCommandLine - https://github.com/jalcine/qcommandline
   * QLogger - https://gitorious.org/log4qt/log4qt
+  * ZeroMQ - http://zeromq.org
 
 Once you've satisfied those dependencies, building is a breeze. Seriously.
 
