--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 # Wintermute
 
+[![Build Status](https://travis-ci.org/jalcine/wintermute.png?branch=feature/testing-environment)](https://travis-ci.org/jalcine/wintermute)
+
 Wintermute is an extensible application that aims to become the foundation of 
 an **artificial intelligence framework**. The application is written in C++ at 
 its core. More information about the project can be found on [its Wiki 
