--- a/README
+++ b/README
@@ -1,7 +1,5 @@
 # Wintermute
-Develop: [![Build Status](https://travis-ci.org/jalcine/wintermute.png?branch=develop)](https://travis-ci.org/jalcine/wintermute)
-
-Testing: [![Build Status](https://travis-ci.org/jalcine/wintermute.png?branch=testing)](https://travis-ci.org/jalcine/wintermute)
+Develop: [![Build Status](https://travis-ci.org/jalcine/wintermute.png?branch=develop)](https://travis-ci.org/jalcine/wintermute) | Testing: [![Build Status](https://travis-ci.org/jalcine/wintermute.png?branch=testing)](https://travis-ci.org/jalcine/wintermute)
 
 Wintermute is an extensible application that aims to become the foundation of 
 an **artificial intelligence framework**. The application is written in C++ at 
