--- a/README
+++ b/README
@@ -3,12 +3,11 @@ Develop: [![Build Status](https://travis-ci.org/jalcine/wintermute.png?branch=de
 
 Wintermute is an extensible application that aims to become the foundation of 
 an **artificial intelligence framework**. The application is written in C++ at 
-its core. More information about the project can be found on [its Wiki 
-page](http://thesii.org/wiki/index.php/Wintermute).
+its core.
 
 ## Installing
 
-Installing? Easy. We use [CMake](http://cmake.org); we gotcha.
+Installing? **Easy**. We use [CMake](http://cmake.org); we gotcha.
 
 ### Requirements
 Wintermute requires a few dependencies at this version. Right now, the only
