--- a/README
+++ b/README
@@ -1,35 +1,34 @@
-# Wintermute
-Develop: [![Build Status](https://travis-ci.org/jalcine/wintermute.png?branch=develop)](https://travis-ci.org/jalcine/wintermute) | Testing: [![Build Status](https://travis-ci.org/jalcine/wintermute.png?branch=testing)](https://travis-ci.org/jalcine/wintermute)
+# Wintermute [![Build Status](https://travis-ci.org/jalcine/wintermute.png)](https://travis-ci.org/jalcine/wintermute) [![Stories in Ready](https://badge.waffle.io/jalcine/wintermute.png)](http://waffle.io/jalcine/wintermute)[![Coverage Status](https://coveralls.io/repos/jalcine/wintermute/badge.png)](https://coveralls.io/r/jalcine/wintermute)
 
 Wintermute is an extensible application that aims to become the foundation of 
 an **artificial intelligence framework**. The application is written in C++ at 
-its core.
+its core but hopes are made to extend the platform to work with **Ruby **, 
+**Python**, **JavaScript**, **Java**, **Scala**, **Lua**, **Haskell** and
+**Go** (not in that exact order!)
 
 ## Installing
 
 Installing? **Easy**. We use [CMake](http://cmake.org); we gotcha. But read
-INSTALL.md for more information.
+[INSTALL.md](./INSTALL.md) for more information.
 
 ## Tested Operating Systems
-So far, Wintermute has only been built and tested on **[Kubuntu](http://www.kubuntu.com)** running 
-a developer preview of Raring Ringtail. It's recommended that after building, you run the test sute (`make test`) and have
-your test results be uploaded to CDash. Wintermute is also tested on [Travis.CI](https://travis-ci.org/thesii/wintermute) for
-those who prefer that utility.
+So far, Wintermute has only been built and tested on a Linux operating system,
+more precisely, running [Kubuntu](http://kubuntu.org) Raring Ringtail 13.04.
+Please build, test and upload your results for comparsion!
 
 ## Contributing
 
- - Fork, make a topic branch and propose your changes!
+ - Fork, make a topic branch and propose your changes! **Bonus points for using Waffle**
  - Build and test Wintermute on a foreign, untested system!
  - Spread the word and do your part to make Wintermute an awesome app!
 
 ## Support
 
-I (the project maintainer, Jacky Alcine) do my best to answer any and all questions pertaining to Wintermute. You can e-mail me at
-me@jalcine.me or find me on IRC on Freenode, OFTC or the Perl servers with the
-nick `jalcine` or `Jacky`.
+I (the project maintainer, Jacky Alcine) do my best to answer any and all 
+questions pertaining to Wintermute. You can e-mail me at me@jalcine.me or 
+find me on IRC on Freenode, OFTC or the Perl servers with the nick
+`jalcine` or `Jacky`.
 
 ## Licensing
 
 Wintermute is licensed under the GPLv2 license. See `LICENSE` for more details.
-
-vim: set ft=markdown tw=78
