--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# Wintermute [![Build Status](https://travis-ci.org/jalcine/wintermute.png)](https://travis-ci.org/jalcine/wintermute) [![Stories in Ready](https://badge.waffle.io/jalcine/wintermute.png)](http://waffle.io/jalcine/wintermute)[![Coverage Status](https://coveralls.io/repos/jalcine/wintermute/badge.png)](https://coveralls.io/r/jalcine/wintermute)
+# Wintermute [![Stories in Ready](https://badge.waffle.io/jalcine/wintermute.png)](http://waffle.io/jalcine/wintermute) [![Coverage Status](https://coveralls.io/repos/jalcine/wintermute/badge.png)](https://coveralls.io/r/jalcine/wintermute) [![Coverage Status](https://coveralls.io/repos/jalcine/wintermute/badge.png)](https://coveralls.io/r/jalcine/wintermute)
 
 Wintermute is an extensible application that aims to become the foundation of 
 an **artificial intelligence framework**. The application is written in C++ at 
