--- a/README
+++ b/README
@@ -6,10 +6,13 @@ its core but hopes are made to extend the platform to work with **Ruby**,
 **Python**, **JavaScript**, **Java**, **Scala**, **Lua**, **Haskell** and
 **Go** (not in that exact order!). It'd be awesome!
 
-## Installing
+> Installing? **Easy**. We use [CMake](http://cmake.org); we gotcha. But read
+> [INSTALL.md](./INSTALL.md) for more information.
 
-Installing? **Easy**. We use [CMake](http://cmake.org); we gotcha. But read
-[INSTALL.md](./INSTALL.md) for more information.
+## Notes
+**Wintermute** itself is built on top of the [Qt framework](http://qt-project.org).
+It also uses a few C++11 features like lambdas and `auto`/`decltype` so it's
+recommended that you build with either `clang` or `gcc >= 4.7`.
 
 ## Tested Operating Systems
 So far, Wintermute has only been built and tested on a Linux operating system,
