--- a/README
+++ b/README
@@ -32,7 +32,7 @@ for it first!
 
 ## Support
 
-I (the project maintainer, Jacky Alcine) do my best to answer any and all 
+I (the project maintainer, Jacky Alciné) do my best to answer any and all
 questions pertaining to Wintermute. You can e-mail me at me@jalcine.me or 
 find me on IRC on Freenode, OFTC or the Perl servers with the nick
 `jalcine` or `Jacky`.
