--- a/README
+++ b/README
@@ -1,18 +1,21 @@
 # Wintermute [![Stories in Ready](https://badge.waffle.io/jalcine/wintermute.png)](http://waffle.io/jalcine/wintermute) [![Coverage Status](https://coveralls.io/repos/jalcine/wintermute/badge.png?branch=develop)](https://coveralls.io/r/jalcine/wintermute?branch=develop) [![Build Status](https://travis-ci.org/jalcine/wintermute.png)](https://travis-ci.org/jalcine/wintermute)
 
-Wintermute is an extensible application that aims to become the foundation of 
-an **artificial intelligence framework**. The application is written in C++ at 
-its core but hopes are made to extend the platform to work with **Ruby**, 
-**Python**, **JavaScript**, **Java**, **Scala**, **Lua**, **Haskell** and
-**Go** (not in that exact order!). It'd be awesome!
+**Wintermute** is meant to be an application platform that aims to:
+  + extend by means of plug-ins and RPC
+  + embrace the mannerisms of parallel computing
+  + works on desktops, mobile devices and embedded platforms
+  + increases its functionality on demand
 
-> Installing? **Easy**. We use [CMake](http://cmake.org); we gotcha. But read
-> [INSTALL.md](./INSTALL.md) for more information.
+This repository has been my tinkering to get the platform as close to
+ideally fit as possibly capable by [me](http://jalcine.me).
+
+Installing? **Easy**. We use [CMake](http://cmake.org); we gotcha. But read
+[INSTALL.md](./INSTALL.md) for more information.
 
 ## Notes
-**Wintermute** itself is built on top of the [Qt framework](http://qt-project.org).
-It also uses a few C++11 features like lambdas and `auto`/`decltype` so it's
-recommended that you build with either `clang` or `gcc >= 4.7`.
+**Wintermute** itself is built using the [Qt4 framework](http://qt-project.org).
+It also uses a few C++11 features like lambdas so it's recommended that you
+build with either `clang` or `gcc >= 4.7`.
 
 ## Tested Operating Systems
 So far, Wintermute has only been built and tested on a Linux operating system,
@@ -42,4 +45,4 @@ find me on IRC on Freenode, OFTC or the Perl servers with the nick
 
 ## Licensing
 
-Wintermute is licensed under the GPLv2 license. See `LICENSE` for more details.
+Wintermute is licensed under the GPLv3 license. See `LICENSE` for more details.
