--- a/TODO
+++ b/TODO
@@ -1,14 +1,45 @@
 # Quicktask v1.2
 
 CURRENT TASKS:
-  - Implement 'FindZeroMQ.cmake'
-    @ Added [Sun 2013-07-14]
-    - Search for `zmq.hpp`
-      @ Added [Tue 2013-07-16]
-    - Search for `libzmq`.
-      @ Added [Tue 2013-07-16]
-  - Move all Log4Qt logic into a vendor heading.
-    @ Added [Tue 2013-07-16]
+  - Implement core plug-ins.
+    @ Added [Sun 2013-09-29]
+    - Implement TCP/IP networking plug-in.
+      @ Added [Sun 2013-09-29]
+    - Implement heartbeat plug-in.
+      @ Added [Sun 2013-09-29]
+    - Implement daemon plug-in.
+      @ Added [Sun 2013-09-29]
+    - Test core plug-ins.
+      @ Added [Sun 2013-09-29]
+  - Re-implement test suite.
+    @ Added [Sun 2013-09-29]
+    - Repair unit testing capabilities.
+      @ Added [Sun 2013-09-29]
+    - Implement extra testing functionality.
+      @ Added [Sun 2013-09-29]
+      - Implement `FeatureTest`.
+        @ Added [Sun 2013-09-29]
+      - Implement `RegressionTest`.
+        @ Added [Sun 2013-09-29]
+    - Implement tests that checks command-line arguments.
+      @ Added [Sun 2013-09-29]
+  - Complete RPC suite (issue #16).
+    @ Added [Sun 2013-09-29]
+    - Complete necessary classes.
+      @ Added [Sun 2013-09-29]
+      @ Start [Sun 2013-09-29] [02:01]
+      - Implement `Wintermute::Procedure::Dispatcher`.
+        @ Added [Sun 2013-09-29]
+      - Implement `Wintermute::Procedure::Receiver`.
+        @ Added [Sun 2013-09-29]
+    - Test necessary classes.
+      @ Added [Sun 2013-09-29]
+      - Write testing foundation for `Wintermute::Procedure`.
+        @ Added [Sun 2013-09-29]
+      - Test `DummyReceiver`.
+        @ Added [Sun 2013-09-29]
+      - Test `DummyDispatcher`.
+        @ Added [Sun 2013-09-29]
 COMPLETED TASKS:
 
 # vim:ft=quicktask
