--- a/README
+++ b/README
@@ -6,21 +6,23 @@
   + works on desktops, mobile devices and embedded platforms
   + increases its functionality on demand
 
-This repository has been my tinkering to get the platform as close to
+This repository has been my tinkering to get the application as close to
 ideally fit as possibly capable by [me](http://jalcine.me).
 
 Installing? **Easy**. We use [CMake](http://cmake.org); we gotcha. But read
 [INSTALL.md](./INSTALL.md) for more information.
 
 ## Notes
-**Wintermute** itself is built using the [Qt4 framework](http://qt-project.org).
+**Wintermute** itself is built using the [Qt4 framework][].
 It also uses a few C++11 features like lambdas so it's recommended that you
 build with either `clang` or `gcc >= 4.7`.
 
 ## Tested Operating Systems
 So far, Wintermute has only been built and tested on a Linux operating system,
-more precisely, running [Kubuntu](http://kubuntu.org) Raring Ringtail 13.04.
+more precisely, running [Kubuntu][] Raring Ringtail 13.04.
 Please build, test and upload your results for comparison!
+
+**Update**: Also builds fine on [Kubuntu][] Saucy Salamander 13.10.
 
 ## Contributing
 
@@ -28,10 +30,8 @@ Please build, test and upload your results for comparison!
  - Build and test Wintermute on a foreign, untested system!
  - Spread the word and do your part to make Wintermute an awesome app!
 
-I *strongly* recommend using tools like
-[`git-flow`](https://github.com/nvie/gitflow) and
-[`git-hooks`](https://github.com/icefox/git-hooks) to accelerate your
-development process.
+I *strongly* recommend using tools like [`git-flow`][] and [`git-hooks`][] to 
+accelerate your development process on the source control side.
 
 Also, if you're adding a new feature, try writing a test for it first! 
 Wintermute has a few wrappers over Qt's testing tools. If you get stuck,
@@ -47,3 +47,8 @@ find me on IRC on Freenode, OFTC or the Perl servers with the nick
 ## Licensing
 
 Wintermute is licensed under the GPLv3 license. See `LICENSE` for more details.
+
+[Kubuntu]: http://kubuntu.org
+[git_flow]: https://github.com/nvie/gitflow
+[git_hooks]: https://github.com/icefox/git-hooks
+[qt4_framework]: http://qt-project.org
