--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-# Wintermute [![Stories in Ready](https://badge.waffle.io/jalcine/wintermute.png)](http://waffle.io/jalcine/wintermute) [![Coverage Status](https://coveralls.io/repos/jalcine/wintermute/badge.png?branch=develop)](https://coveralls.io/r/jalcine/wintermute?branch=develop) [![Build Status](https://travis-ci.org/jalcine/wintermute.png)](https://travis-ci.org/jalcine/wintermute)
-
+# Wintermute [![Stories in Ready](https://badge.waffle.io/wintermuteapp/wintermute.png)](http://waffle.io/wintermuteapp/wintermute) [![Coverage Status](https://coveralls.io/repos/wintermuteapp/wintermute/badge.png?branch=develop)](https://coveralls.io/r/wintermuteapp/wintermute?branch=develop) [![Build Status](https://travis-ci.org/wintermuteapp/wintermute.png)](https://travis-ci.org/wintermuteapp/wintermute)
+
 **Wintermute** is meant to be an application platform that aims to:
   + extend by means of plug-ins and RPC
   + embrace the mannerisms of parallel computing
