--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# Wintermute [![Stories in Ready](https://badge.waffle.io/jalcine/wintermute.png)](http://waffle.io/jalcine/wintermute) [![Coverage Status](https://coveralls.io/repos/jalcine/wintermute/badge.png?branch=develop)](https://coveralls.io/r/jalcine/wintermute?branch=develop) [![Build Status](https://travis-ci.org/jalcine/wintermute.png)](https://travis-ci.org/jalcine/wintermute)
+# Wintermute [![Stories in Ready][waffles_img]][waffles] [![Coverage Status][coveralls_img]](https://coveralls.io/r/jalcine/wintermute?branch=develop) [![Build Status](https://travis-ci.org/jalcine/wintermute.png)](https://travis-ci.org/jalcine/wintermute)
 
 **Wintermute** is meant to be an application platform that aims to:
   + extend by means of plug-ins and RPC
@@ -15,7 +15,7 @@ Installing? **Easy**. We use [CMake](http://cmake.org); we gotcha. But read
 ## Notes
 **Wintermute** itself is built using the [Qt4 framework][].
 It also uses a few C++11 features like lambdas so it's recommended that you
-build with either `clang` or `gcc >= 4.7`.
+build with either `clang >= 3.5-1~exp1` or `gcc >= 4.8.1`.
 
 ## Tested Operating Systems
 So far, Wintermute has only been built and tested on a Linux operating system,
@@ -52,3 +52,9 @@ Wintermute is licensed under the GPLv3 license. See `LICENSE` for more details.
 [git_flow]: https://github.com/nvie/gitflow
 [git_hooks]: https://github.com/icefox/git-hooks
 [qt4_framework]: http://qt-project.org
+[waffles]: http://waffle.io/jalcine/wintermute
+[waffles_img]: http://badge.waffle.io/jalcine/wintermute.png
+[coveralls_img]: https://coveralls.io/repos/jalcine/wintermute/badge.png?branch=develop
+[coveralls]:
+[travis]:
+[travis_img]:
