--- a/README
+++ b/README
@@ -12,7 +12,7 @@ Installing? **Easy**. We use [CMake](http://cmake.org); we gotcha. But read
 [INSTALL.md](./INSTALL.md) for more information.
 
 ## Notes
-**Wintermute** itself is built using the [Qt4 framework][].
+**Wintermute** itself is built using [Qt][qt4].
 It also uses a few C++11 features like lambdas so it's recommended that you
 build with either `clang >= 3.5-1~exp1` or `gcc >= 4.8.1`.
 
@@ -49,5 +49,5 @@ Wintermute is licensed under the GPLv3 license. See `LICENSE` for more details.
 [Kubuntu]: http://kubuntu.org
 [git_flow]: https://github.com/nvie/gitflow
 [git_hooks]: https://github.com/icefox/git-hooks
-[qt4_framework]: http://qt-project.org
+[qt4]: http://qt-project.org
 [gitter]: https://gitter.im/wintermuteapp/wintermute
