--- a/README
+++ b/README
@@ -28,7 +28,8 @@ Please build, test and upload your results for comparison!
  - Build and test Wintermute on a foreign, untested system!
  - Spread the word and do your part to make Wintermute an awesome app!
 
-I *strongly* recommend using tools like [`git-flow`][] and [`git-hooks`][] to 
+I *strongly* recommend using tools like `[git-flow][gitflows]` and
+`[git-hooks][githooks]` to 
 accelerate your development process on the source control side.
 
 Also, if you're adding a new feature, try writing a test for it first! 
@@ -47,7 +48,7 @@ find me on IRC on Freenode, OFTC or the Perl servers with the nick
 Wintermute is licensed under the GPLv3 license. See `LICENSE` for more details.
 
 [Kubuntu]: http://kubuntu.org
-[git_flow]: https://github.com/nvie/gitflow
-[git_hooks]: https://github.com/icefox/git-hooks
+[gitflow]: https://github.com/nvie/gitflow
+[githooks]: https://github.com/icefox/git-hooks
 [qt4]: http://qt-project.org
 [gitter]: https://gitter.im/wintermuteapp/wintermute
