Updated README for density.

--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 # Wintermute [![Stories in Ready](https://badge.waffle.io/wintermuteapp/wintermute.png)](http://waffle.io/wintermuteapp/wintermute) [![Coverage Status](https://coveralls.io/repos/wintermuteapp/wintermute/badge.png?branch=develop)](https://coveralls.io/r/wintermuteapp/wintermute?branch=develop) [![Build Status](https://travis-ci.org/wintermuteapp/wintermute.png)](https://travis-ci.org/wintermuteapp/wintermute)  [![Gitter chat](https://badges.gitter.im/wintermuteapp/wintermute.png)](https://gitter.im/wintermuteapp/wintermute)
+
 **Wintermute** is meant to be an application platform that aims to:
   + extend by means of plug-ins and RPC
   + embrace the mannerisms of parallel computing
@@ -8,8 +9,9 @@
 This repository has been my tinkering to get the application as close to
 ideally fit as possibly capable by [me](http://jalcine.me).
 
-Installing? **Easy**. We use [CMake](http://cmake.org); we gotcha. But read
-[INSTALL.md](./INSTALL.md) for more information.
+Building and/or installing? **Easy**. We use [CMake](http://cmake.org); we 
+gotcha; read [INSTALL.md](./INSTALL.md) for more information. Feel free to
+[contribute](./CONTRIBUTING.md) to the project.
 
 ## Notes
 **Wintermute** itself is built using [Qt][qt4].
@@ -18,19 +20,22 @@ build with either `clang >= 3.5-1~exp1` or `gcc >= 4.8.1`.
 
 ## Tested Operating Systems
 So far, Wintermute has only been built and tested on a Linux operating system,
-more precisely, running [Kubuntu][] Raring Ringtail 13.04.
-Please build, test and upload your results for comparison!
+more precisely, running [Kubuntu][] Raring Ringtail 13.04. Please build, test 
+and upload your results for comparison!
 
 **Update**: Also builds fine on [Kubuntu][] Saucy Salamander 13.10.
+
 ## Contributing
 
- - Fork, make a topic branch and propose your changes! **Bonus points for using Waffle**
- - Build and test Wintermute on a foreign, untested system!
- - Spread the word and do your part to make Wintermute an awesome app!
+ - Fork, make a topic branch and propose your changes.
+   **Bonus points for using Waffle and/or topic branches!**
+ - Build and test Wintermute on a foreign, untested system.
+ - Spread the word and do your part to make Wintermute an awesome app
+   framework.
 
 I *strongly* recommend using tools like `[git-flow][gitflows]` and
-`[git-hooks][githooks]` to 
-accelerate your development process on the source control side.
+`[git-hooks][githooks]` to accelerate your development process on 
+the source control side.
 
 Also, if you're adding a new feature, try writing a test for it first! 
 Wintermute has a few wrappers over Qt's testing tools. If you get stuck,
